更改附件链接

--- a/Java/网络编程.md
+++ b/Java/网络编程.md
@@ -498,7 +498,7 @@ class InterruptibleSocketFrame extends JFrame {
 |可中断|不可中断|
 |--|--|
 |客户端第10个数字打印之后，服务器线程进入睡眠，点击 Cancel 按钮，当前客户端线程取消阻塞状态，当前通道关闭，服务器关闭。|客户端第10个数字打印之后，服务器线程进入睡眠，点击 Cancel 按钮，当前客户端线程无法取消阻塞状态，需等服务器关闭连接。|
-|![[Pasted image 20220714144303.png]]|![[Pasted image 20220714144327.png]]|
+|![20220714144303.png](./attachments/20220714144303.png)|![20220714144327.png](./attachments/20220714144327.png)|
 
 ## URL和URI
 
