docs: edit post '汽车随手记'

--- a/随手记/汽车.md
+++ b/随手记/汽车.md
@@ -1,3 +1,3 @@
-| 品牌 | 车系 | 车型      | 指导价    |
-|:--:|:--:|:-------:|:------:|
-| 星途 | 凌云 | 400T 星尊 | 167900 |  
+|  品牌  |  车系  |  车型       | 级别    |  指导价     |
+|:-----|:-----|:----------|:------|:---------|
+|  星途  |  凌云  |  400T 星尊  | 中型SUV |  167900  |  
