docs: edit note '汽车随手记'

--- a/随手记/汽车.md
+++ b/随手记/汽车.md
@@ -1,3 +1,4 @@
 |  品牌  |  车系  |  车型       | 级别    |  指导价     |
 |:-----|:-----|:----------|:------|:---------|
-|  星途  |  凌云  |  400T 星尊  | 中型SUV |  ￥167900  |  
+|  星途  |  凌云  |  400T两驱星睿版PRO  | 中型SUV |  ￥16.29  |
+|  吉利  |  星越S  |  2.0TD自动两驱闪电版  | 紧凑型SUV |  ￥15.77  |
