--- a/随手记/汽车.md
+++ b/随手记/汽车.md
@@ -1,4 +1,4 @@
-|  品牌  |  车系  |  车型       | 级别    |  指导价     |
+|  品牌  |  车系  |  车型       | 级别    |  指导价（万）     |
 |:-----|:-----|:----------|:------|:---------|
 |  星途  |  凌云  |  400T两驱星睿版PRO  | 中型SUV |  ￥16.29  |
 |  吉利  |  星越S  |  2.0TD自动两驱闪电版  | 紧凑型SUV |  ￥15.77  |
